--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "eslint": "8.46.0",
     "nodemon": "3.0.1"
-  }
+  },
+  "engines": {
+        "node": ">= 18.18.0"
+    }
 }
